# ABC-SMC

./: CMakeLists.txt  README.md  compile.sh  configuration.json  example1_job.json  job.json  main.cpp  measurement.json
include/third-party-library/: csv_writer.h
include/third-party-library/matplotlib-cpp/: CMakeLists.txt  matplotlibcpp.h
include/third-party-library/pcg-cpp/: pcg_uint128.hpp
src/: abc_smc_fit.cpp  abc_smc_fit.h  concrete_spectrum_model.cpp  concrete_spectrum_model.h  config.cpp  job_data.cpp  json_handler.cpp  json_handler.h  main.cpp  pcg_random_generator.h  peak_model.cpp  peak_model.h  probability_distribution.cpp  probability_distribution.h  spectrum.cpp  spectrum_model.cpp  spectrum_model.h  util.cpp  util.h
src/models/: example1.cpp  example1.h  peak_model.h  simulator.cpp  simulator.h  simulatorparameters.cpp  simulatorparameters.h  spectrum.cpp  spectrum_model.cpp  spectrum_model.h
